# OpenscadMCP

./: .gitignore  README.md  pyproject.toml
src/openscad_mcp/: __init__.py  __main__.py  imaging.py  openscad.py  sandbox.py  server.py
